--- a/CGPA Calculator/CGPA Calculator.vcxproj
+++ b/CGPA Calculator/CGPA Calculator.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Results.txt" />
+    <Text Include="Student.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
