--- a/CGPA Calculator/CGPA Calculator.vcxproj.filters
+++ b/CGPA Calculator/CGPA Calculator.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Student.txt" />
+    <Text Include="Results.txt" />
+  </ItemGroup>
 </Project>
